--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     <div class="invitation-card">
       <div class="header">
         <h1 class="main-title" id="mainTitle">💐 Wedding Invitation 💐</h1>
-        <div class="couple-names">Sathiya & Lokeshwaran</div>
+        <div class="couple-names">Lokeshwaran & Sathiya </div>
       </div>
 
       <div class="photo-gallery">
