--- a/index.html
+++ b/index.html
@@ -444,23 +444,9 @@
       </div>
       
 <!-- Hidden audio element -->
-  <audio id="bg-music" src="Dharala-Prabhu-Title-Track-MassTamilan.io.mp3" autoplay loop></audio>
+  <audio id="bg-music" src="Dharala-Prabhu.mp3" autoplay loop></audio>
 
-  <script>
-    const audio = document.getElementById('bg-music');
-
-    // Ensure it plays automatically (especially on some browsers like Chrome)
-    document.addEventListener('DOMContentLoaded', () => {
-      // Try to play on load
-      const playAudio = () => {
-        audio.play().catch((error) => {
-          // If autoplay fails (like on user interaction required), try again on user interaction
-          document.body.addEventListener('click', () => audio.play(), { once: true });
-        });
-      };
-      playAudio();
-    });
-  </script>
+  
       <div class="photo-gallery">
         <div class="couple-photo">👰🤵</div>
       </div>
@@ -540,6 +526,20 @@
   </div>
 
   <script>
+    const audio = document.getElementById('bg-music');
+
+    // Ensure it plays automatically (especially on some browsers like Chrome)
+    document.addEventListener('DOMContentLoaded', () => {
+      // Try to play on load
+      const playAudio = () => {
+        audio.play().catch((error) => {
+          // If autoplay fails (like on user interaction required), try again on user interaction
+          document.body.addEventListener('click', () => audio.play(), { once: true });
+        });
+      };
+      playAudio();
+    });
+  
     // Language data
     const en = {
       mainTitle: "💐 Wedding Invitation 💐",
