--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 
     // Route display
     function showRoute(mode) {
-      const base = "https://www.google.com/maps/dir/?api=1&destination=11.3458453,77.7183274";
+      const base = "https://maps.app.goo.gl/XSLn5q1NyGvWknuS9";
       const travelMode = mode === "bus" ? "transit" : "driving";
       const mapURL = `${base}&travelmode=${travelMode}`;
       
